# librats

./: .gitignore  ARCHITECTURE.md  BITTORRENT_EXAMPLE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  GOSSIPSUB_EXAMPLE.md  LICENSE  MDNS_DISCOVERY.md  MESSAGE_EXCHANGE_API.md  NAT_TRAVERSAL.md  NAT_TRAVERSAL_EXAMPLE.md  NOISE_ENCRYPTION.md  README.md  conanfile.py
.github/workflows/: android.yml  npm-publish.yml  pages.yml  rats.yml  tests.yml
android/: INTEGRATION.md  README.md  build.gradle  proguard-rules.pro  settings.gradle
android/src/main/cpp/: CMakeLists.txt  librats_jni.cpp
bench/: CMakeLists.txt  README.md  bench.h  bench_complex.cpp  bench_data.h  bench_json.cpp  bench_mem.cpp  stable_json.cpp  stable_json.h
bench/baseline/: legacy_buffers.cpp  legacy_buffers.h  noisec.h  noisec_aead.c  noisec_blake2b.c  noisec_blake2s.c  noisec_chacha.c  noisec_curve25519.c  noisec_poly1305.c  noisec_sha256.c  noisec_sha512.c  stable_json.cpp
bench/framework/: alloc_track.cpp  alloc_track.h
bench/suites/: bench_complex.cpp  bench_crypto.cpp  bench_dht.cpp  bench_json.cpp  bench_mem.cpp  bench_rx.cpp  bench_tx.cpp
bench/support/: net_mock.h
cmake/: ratsConfig.cmake.in
docs/: BITTORRENT_EXAMPLE.md  FILE_TRANSFER_EXAMPLE.md  doxygen-custom.css  doxygen-footer.html  doxygen-header.html  index.html  mainpage.md  styles.css
docs/doxygen-awesome-css/: doxygen-awesome-darkmode-toggle.js  doxygen-awesome-fragment-copy-button.js  doxygen-awesome-interactive-toc.js  doxygen-awesome-paragraph-link.js  doxygen-awesome-sidebar-only-darkmode-toggle.css  doxygen-awesome-sidebar-only.css  doxygen-awesome.css
examples/: 01_chat.cpp  02_pubsub.cpp  03_typed_messaging.cpp  04_file_transfer.cpp  05_dht_discovery.cpp  06_bittorrent_download.cpp  07_full_chat.cpp  CMakeLists.txt  README.md  basic_p2p.cpp  bt_download.cpp  bt_metadata_bench.cpp  peer_discovery.cpp
nodejs/: .gitignore  .npmignore  INSTALLATION.md  QUICK_START_GUIDE.md  README.md  SETUP_COMPLETE.md  binding.gyp  package-lock.json  package.json
nodejs/examples/: basic_client.js  file_transfer.js  gossipsub_chat.js
nodejs/lib/: index.d.ts  index.js
nodejs/scripts/: build-librats.js  postinstall.js  prepare-package.js  verify-installation.js
nodejs/src/: librats_node.cpp
nodejs/test/: test.js
ports/librats/: portfile.cmake  usage  vcpkg.json
python/: MANIFEST.in  PYTHON_BINDINGS.md  README.md  build.py  pyproject.toml  setup.py
python/librats_py/: __init__.py  callbacks.py  core.py  ctypes_wrapper.py  enums.py  exceptions.py
src/: bencode.cpp  bencode.h  bittorrent.cpp  bittorrent.h  bt_bitfield.cpp  bt_bitfield.h  bt_choker.cpp  bt_choker.h  bt_client.cpp  bt_client.h  bt_create_torrent.cpp  bt_create_torrent.h  bt_extension.cpp  bt_extension.h  bt_file_storage.cpp  bt_file_storage.h  bt_handshake.cpp  bt_handshake.h  bt_messages.cpp  bt_messages.h  bt_network.cpp  bt_network.h  bt_peer_connection.cpp  bt_peer_connection.h  bt_piece_picker.cpp  bt_piece_picker.h  bt_resume_data.cpp  bt_resume_data.h  bt_torrent.cpp  bt_torrent.h  bt_torrent_info.cpp  bt_torrent_info.h  bt_types.h  chained_send_buffer.cpp  crc32.cpp  crc32.h  crc32c.cpp  crc32c.h  dht.cpp  dht.h  (+79 more)
src/bindings/: rats.cpp  rats.h  rats_node.cpp  rats_node.h
src/bittorrent/: bencode.cpp  bencode.h  bitfield.cpp  bitfield.h  bittorrent.h  bt_bitfield.cpp  bt_choker.cpp  bt_client.cpp  bt_client.h  bt_create_torrent.cpp  bt_create_torrent.h  bt_extension.cpp  bt_extension.h  bt_file_storage.cpp  bt_handshake.cpp  bt_handshake.h  bt_messages.cpp  bt_messages.h  bt_network.cpp  bt_network.h  bt_peer_connection.cpp  bt_peer_connection.h  bt_piece_picker.cpp  bt_piece_picker.h  bt_resume_data.cpp  bt_resume_data.h  bt_torrent.cpp  bt_torrent.h  bt_torrent_info.cpp  bt_torrent_info.h  byte_io.h  choker.cpp  choker.h  client.cpp  client.h  disk_io.cpp  disk_io.h  extensions.cpp  extensions.h  file_storage.cpp  (+26 more)
src/core/: address.cpp  address.h  bytes.h  chained_send_buffer.cpp  chained_send_buffer.h  connection.cpp  connection.h  endpoint_parse.cpp  endpoint_parse.h  event_bus.h  host_endpoint.h  io_poller.cpp  io_poller.h  ip_address.cpp  ip_address.h  mpsc_queue.h  notifier.h  reactor.cpp  reactor.h  reactor_pool.h  receive_buffer.cpp  receive_buffer.h  service_registry.h  socket.cpp  socket.h  threadmanager.cpp  threadmanager.h  timer_queue.h  types.cpp  types.h  wakeup_pipe.h
src/crypto/: blake2_endian.h  blake2b.c  blake2b.h  blake2s.c  blake2s.h  chacha.c  chacha.h  chachapoly.c  chachapoly.h  curve25519.c  curve25519.h  hkdf.c  hkdf.h  noise.cpp  noise.h  poly1305.c  poly1305.h  sha1.cpp  sha1.h  sha256.c  sha256.h  sha512.c  sha512.h
src/dht/: announce.cpp  announce.h  bep42.cpp  bep42.h  dht.cpp  dht.h  dht_runner.cpp  dht_runner.h  dos_blocker.cpp  dos_blocker.h  find_peers.cpp  find_peers.h  id.h  krpc.cpp  krpc.h  log.h  node.cpp  node.h  node_entry.h  observer.h  persistence.cpp  persistence.h  routing_table.cpp  routing_table.h  rpc_manager.cpp  rpc_manager.h  storage.cpp  storage.h  transport.h  traversal.cpp  traversal.h  udp_transport.cpp  (+1 more)
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
tests/: test_bencode.cpp  test_bittorrent.cpp  test_bt_bitfield.cpp  test_bt_byte_io.cpp  test_bt_choker.cpp  test_bt_create_torrent.cpp  test_bt_disk_io.cpp  test_bt_download.cpp  test_bt_extension.cpp  test_bt_extensions.cpp  test_bt_file_storage.cpp  test_bt_handshake.cpp  test_bt_integration.cpp  test_bt_magnet.cpp  test_bt_magnet_fetch.cpp  test_bt_messages.cpp  test_bt_network.cpp  test_bt_pause_resume.cpp  test_bt_peer_connection.cpp  test_bt_peer_list.cpp  test_bt_pex.cpp  test_bt_piece_picker.cpp  test_bt_reactor.cpp  test_bt_resume_data.cpp  test_bt_stall_metadata.cpp  test_bt_store_buffer.cpp  test_bt_subsystem.cpp  test_bt_torrent_creator.cpp  test_bt_torrent_info.cpp  test_bt_tracker.cpp  test_bt_types.cpp  test_chained_send_buffer.cpp  test_config_persistence.cpp  test_crc32.cpp  test_crc32c.cpp  test_crypto_blake2.cpp  test_crypto_chacha_poly.cpp  test_crypto_curve25519.cpp  test_crypto_sha2.cpp  test_dht.cpp  (+57 more)
(+112 files in other folders)
